--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<!--<html lang="en">-->
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <!--<meta charset="UTF-8">-->
     <title>footer</title>
 </head>
 <body>
-Dejmnien
+<!--<footer>-->
+
+    <div th:fragment="pageFooter">
+        Dejmnien
+    </div>
+<!--</footer>-->
 </body>
 </html>
+
