--- a/src/main/resources/templates/helloThymeleaf.html
+++ b/src/main/resources/templates/helloThymeleaf.html
@@ -5,12 +5,18 @@
     <meta charset="UTF-8">
 
     <title>Getting Started: Serving Web Content</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
     <title>Hello Thymeleaf</title>
 </head>
 <body>
+dziala ta strona?
+<p th:text="'Hello Thymeleaf'"/>
 
-<p th:text="'Hello Thymeleaf'" />
+<!--<footer th:include="fragments/footer :: pageFooter"></footer>-->
+
+<div th:include="fragments/footer ::pageFooter"></div>
+<!--<footer th:replace="fragments/footer :: pageFooter"></footer>-->
+
 </body>
 </html>
